build(maven): 优化数采